# kormir

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml  test.yml
kormir/: CHANGELOG.md  Cargo.toml
kormir-server/: .env.sample  CHANGELOG.md  Cargo.toml
kormir-server/migrations/2023-10-05-002338_baseline/: down.sql  up.sql
kormir-server/migrations/2024-12-03-202013_change_primary_key_to_event_id/: down.sql  up.sql
kormir-server/src/: main.rs  routes.rs
kormir-server/src/models/: event.rs  event_nonce.rs  mod.rs  oracle_metadata.rs  schema.rs
kormir-wasm/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
kormir-wasm/src/: error.rs  lib.rs  models.rs  storage.rs  utils.rs
kormir/src/: error.rs  lib.rs  nostr_events.rs  storage.rs  utils.rs
