[package]
name = "kormir-server"
version = "0.1.8"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>"]
description = "DLC Oracle RPC Server"
license = "MIT"
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/benthecarman/kormir"
repository = "https://github.com/benthecarman/kormir"

[dependencies]
kormir = { path = "../kormir", version = "0.1.8", features = ["nostr"] }

anyhow = "1.0"
axum = { version = "0.6.16", features = ["headers"] }
bitcoin = { version = "0.29.2", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dlc-messages = "0.4.0"
dotenv = "0.15.0"
futures = "0.3.28"
lightning = "0.0.113"
log = "0.4.20"
nostr = "0.27.0"
nostr-sdk = "0.27.0"
pretty_env_logger = "0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.12.0", features = ["full"] }
