[package]
name = "kormir-server"
version = "0.3.0"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>", "benny b <ben@bitcoinbay.foundation>"]
description = "DLC Oracle RPC Server"
license = "MIT"
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/bennyhodl/kormir"
repository = "https://github.com/bennyhodl/kormir"

[dependencies]
kormir = { path = "../kormir", version = "0.3.1", features = ["nostr"] }

anyhow = "1.0"
axum = { version = "0.6.16", features = ["headers"] }
bitcoin = { version = "0.32.2", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
# dlc-messages = { version = "0.6.0", git = "https://github.com/p2pderivatives/rust-dlc", branch = "master", features = [ "use-serde"] }
dlc-messages = { version = "0.6.0", git = "https://github.com/bennyhodl/rust-dlc", rev = "e712238d573a44a6f37082b73fbdc1a3cb2918ad", features = [ "use-serde"] }
dotenv = "0.15.0"
futures = "0.3.28"
log = "0.4.20"
nostr = "0.29.1"
nostr-sdk = "0.29.0"
pretty_env_logger = "0.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.12.0", features = ["full"] }
hex = "0.4.3"
