[package]
name = "kormir-wasm"
version = "0.3.2"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>"]
description = "DLC Oracle WASM SDK"
license = "MIT"
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/bennyhodl/kormir"
repository = "https://github.com/bennyhodl/kormir"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kormir = { path = "../kormir", version = "0.4.0", features = ["nostr"] }

anyhow = "1.0.75"
bip39 = "2.0.0"
chrono = "0.4.31"
getrandom = { version = "0.2", features = ["js"] }
gloo-utils = "0.2.0"
hex = "0.4.3"
log = "0.4.17"
nostr = "0.29.1"
nostr-sdk = "0.29.0"
rexie = "0.5.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
