[package]
name = "kormir"
version = "0.2.0"
edition = "2021"
authors = ["benthecarman <ben@mutinywallet.com>"]
description = "DLC Oracle rust SDK"
license = "MIT"
documentation = "https://docs.rs/kormir"
homepage = "https://github.com/benthecarman/kormir"
repository = "https://github.com/benthecarman/kormir"

[features]
default = []
nostr = ["dep:nostr", "dep:base64"]

[dependencies]
bitcoin = { version = "0.30.2", features = ["serde"] }
dlc = { version = "0.5.0", features = ["use-serde"] }
dlc-messages = { version = "0.5.0", features = ["use-serde"] }
lightning = "0.0.121"
log = "0.4.22"
nostr = { version = "0.29.1", optional = true }
base64 = { version = "0.13.1", optional = true }
serde = "1.0"
secp256k1-zkp = "0.9.2"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.11.0", features = ["full"] }
